Fix image cropping - align to top instead of center

--- a/static/style.css
+++ b/static/style.css
@@ -345,6 +345,7 @@ header {
     width: 100%;
     height: 200px;
     object-fit: cover;
+    object-position: top;
 }
 
 .card-body {
